--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,3 +11,4 @@
 @use '/src/sass/blocks/promo.scss' as *;
 @use '/src/sass/blocks/activities.scss' as *;
 @use '/src/sass/blocks/touch.scss' as *;
+@use '/src/sass/blocks/works.scss' as *;
