--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,3 +12,4 @@
 @use '/src/sass/blocks/activities.scss' as *;
 @use '/src/sass/blocks/touch.scss' as *;
 @use '/src/sass/blocks/works.scss' as *;
+@use '/src/sass/blocks/footer.scss' as *;
