--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -32,6 +32,60 @@
   &__nav {
     display: none;
   }
+
+  &__menu {
+    padding: 50px 10px;
+    position: fixed;
+    top: 0;
+    left: -100vw;
+    width: 100vw;
+    height: 100vh;
+    background-color: $light;
+    transition: transform 0.4s;
+
+    &_active {
+      transform: translateX(100%);
+    }
+
+    &-close {
+      width: 14px;
+      height: 14px;
+
+      span {
+        display: block;
+        width: 20px;
+        height: 1px;
+        background-color: $dark;
+
+        &:nth-child(1) {
+          transform: translateY(8.5px) rotate(45deg);
+        }
+        &:nth-child(2) {
+          transform: translateY(8px) rotate(-45deg);
+        }
+      }
+    }
+
+    &-nav {
+      margin-top: 50px;
+      padding-left: 14px;
+      ul {
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+        padding: 0;
+        list-style: none;
+      }
+    }
+
+    &-link {
+      color: $dark;
+      font-size: 20px;
+      line-height: normal;
+      text-transform: uppercase;
+      text-decoration: none;
+    }
+  }
 }
 
 .burger {
@@ -75,6 +129,10 @@
       line-height: normal;
       text-transform: uppercase;
       text-decoration: none;
+    }
+
+    &__menu {
+      display: none;
     }
   }
 
