--- a/src/sass/base/mixins.scss
+++ b/src/sass/base/mixins.scss
@@ -23,3 +23,23 @@
   background-color: transparent;
   cursor: pointer;
 }
+
+@mixin angle-decoration {
+
+  &::after, &::before {
+    content: '';
+    position: absolute;
+    background-color: $dark;
+    top: 0;
+    left: 0;
+  }
+
+  &::after {
+    height: 200px;
+    width: 1px;
+  }
+  &::before {
+    height: 1px;
+    width: 200px;
+  }
+}
