--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,15 +1,18 @@
 @use '/src/sass/libs/modern-normalize.min.css';
-@use '/src/sass/libs/grids-min.css' as *;
-@use '/src/sass/libs/grids-responsive-min.css' as *;
+@use '/src/sass/libs/grids-min.css';
+@use '/src/sass/libs/grids-responsive-min.css';
 @use '/src/sass/libs/fontello.css';
-@use '/src/sass/base/basis.scss' as *;
+@use '/src/sass/base/basis.scss';
 
-@use '/src/sass/blocks/header.scss' as *;
-@use '/src/sass/ui/titles.scss' as *;
-@use '/src/sass/ui/buttons.scss' as *;
+@use '/src/sass/blocks/header.scss';
+@use '/src/sass/blocks/footer.scss';
 
-@use '/src/sass/blocks/promo.scss' as *;
-@use '/src/sass/blocks/activities.scss' as *;
-@use '/src/sass/blocks/touch.scss' as *;
-@use '/src/sass/blocks/works.scss' as *;
-@use '/src/sass/blocks/footer.scss' as *;
+@use '/src/sass/ui/titles.scss';
+@use '/src/sass/ui/buttons.scss';
+
+@use '/src/sass/blocks/promo.scss';
+@use '/src/sass/blocks/activities.scss';
+@use '/src/sass/blocks/touch.scss';
+@use '/src/sass/blocks/works.scss';
+@use '/src/sass/blocks/catalog.scss';
+@use '/src/sass/blocks/blog.scss';
