--- a/src/sass/base/basis.scss
+++ b/src/sass/base/basis.scss
@@ -59,6 +59,11 @@ body {
 .container {
   width: 100%;
   padding: 0 10px;
+  
+}
+
+.just-validate-error-label {
+  margin-top: 8px;
 }
 
 @media screen and (min-width: 768px) {
